Loqate/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>Custom address fields which Postcode Anywhere should integrate with</description>
    <label>Address Integration</label>
    <nameField>
        <label>Address Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>