Loqate/main/default/objects/Address__c/fields/Admin_Area_Field__c.field-meta.xml
<CustomField>
    <fullName>Admin_Area_Field__c</fullName>
    <inlineHelpText>The administration area or US county.</inlineHelpText>
    <label>Area/County Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>