Loqate/main/default/objects/Address__c/fields/Building_Field__c.field-meta.xml
<CustomField>
    <fullName>Building_Field__c</fullName>
    <inlineHelpText>This field allows you to separately store a copy of the building name or number which is required some back back office systems, it will still appear as part of the street address.</inlineHelpText>
    <label>Building Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>