Loqate/main/default/objects/Address__c/fields/Company_Field__c.field-meta.xml
<CustomField>
    <fullName>Company_Field__c</fullName>
    <inlineHelpText>If you specify a company name field and search in a country with premise level data, it can be used to search for the company address</inlineHelpText>
    <label>Company Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>