Loqate/main/default/objects/Address__c/fields/Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Id_Field__c</fullName>
    <inlineHelpText>The unique delivery point reference number or Postcode Anywhere Id for the address. This can be used for de-duplication and helps with address data quality.</inlineHelpText>
    <label>Id Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>