Loqate/main/default/objects/Address__c/fields/Postalcode_Field__c.field-meta.xml
<CustomField>
    <fullName>Postalcode_Field__c</fullName>
    <label>Postalcode Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>