Loqate/main/default/objects/Address__c/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <description>The Postcode Anywhere Settings set that this integration relates to</description>
    <label>Setting</label>
    <referenceTo>Setting__c</referenceTo>
    <relationshipName>Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>