Loqate/main/default/objects/Address__c/fields/State_Field__c.field-meta.xml
<CustomField>
    <fullName>State_Field__c</fullName>
    <inlineHelpText>The state or UK county. This is usually part of the default salesforce address format.</inlineHelpText>
    <label>State Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>