Loqate/main/default/objects/Address__c/fields/Street_Field__c.field-meta.xml
<CustomField>
    <fullName>Street_Field__c</fullName>
    <label>Street Field</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>