Loqate/main/default/objects/Address__c/fields/Type_Field__c.field-meta.xml
<CustomField>
    <fullName>Type_Field__c</fullName>
    <inlineHelpText>If this field is a check box on your page layout it will checked when the address type is &quot;Residential&quot;</inlineHelpText>
    <label>Address Type Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>