Loqate/main/default/objects/Address__c/fields/Validation_Field__c.field-meta.xml
<CustomField>
    <fullName>Validation_Field__c</fullName>
    <inlineHelpText>This should ideally be a check box. We can populate this field for you with the validation state of the address. Specifying this field and adding it into a validation rule allows you to force users to enter validated addresses.</inlineHelpText>
    <label>Validation Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>